# MCP-QGIS

./: .gitignore  CONTRIBUTING.md  PLAN-IR-SCHEMA.json  README.md  pyproject.toml
.github/workflows/: ci.yml
PLANS/: MCP-QGIS-CONCEPT-TASKS.md  MCP-QGIS-CONCEPT.md  MCP-QGIS-TASKS.md
deploy/clients/: antigravity-mcp.example.json  claude-code-mcp.example.json  codex-mcp.example.json
deploy/profiles/: allowed_algorithms.txt  local.env  server.env
docs/: CLIENT-INTEGRATION.md  DEPLOYMENT.md  MVP-RELEASE-CHECKLIST.md  PLUGIN-BRIDGE.md
mcp_qgis/: __init__.py  artifacts.py  cli.py  config.py  envelope.py  errors.py  logging_utils.py  plan_mapper.py  planner.py  security.py  server.py  variants.py
mcp_qgis/adapters/: qgis_adapter.py
mcp_qgis/core/: __init__.py  locks.py  plan.py  sessions.py  state.py  transactions.py
mcp_qgis/tools/: dispatcher.py
mcp_qgis/validators/: __init__.py  geometry_checks.py  ruleset.py
qgis_plugin/mcp_qgis_bridge/: __init__.py  metadata.txt  plugin.py
rulesets/: cadastre_default.json
schemas/: mcp-tools.schema.json
scripts/: backup_runtime.sh  bridge_smoke.py  qgis_mcp_launcher.sh  restore_runtime.sh  smoke.sh
testdata/: README.md
testdata/scenario-01-split-road/: meta.json  notes.md
testdata/scenario-02-boundary-shift/: meta.json
testdata/scenario-03-utilities-constraints/: meta.json
tests/: test_adapter.py  test_artifacts.py  test_cli.py  test_dispatcher.py  test_envelope.py  test_plan_mapper.py  test_planner.py  test_security.py  test_sessions_locks.py  test_transactions.py  test_variants.py
(+7 files in other folders)
