[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-qgis"
version = "0.1.0"
description = "MCP + QGIS cadastre MVP skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
mcp-qgis = "mcp_qgis.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mcp_qgis*"]
